<resources>
    <string name="app_name">TestApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_of_the_day_stub">Фото дня</string>
    <string name="search_wiki">поиск в википедии</string>
    <string name="wiki_helper_text">Поиск</string>
    <string name="favourite">избранное</string>
    <string name="settings">настройки</string>
    <string name="search">поиск</string>
    <string name="pls_push_me">Нажми меня</string>
    <string name="yestraday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="random_date">Случаиная дата</string>
    <string name="experemental">Exper</string>
    <string name="moon">Moon</string>
    <string name="light">Light</string>
    <string name="hudi">hudi</string>
    <string name="normal">norm</string>
    <string name="darkens">dark</string>
    <string name="choice_theme">Choice Theme</string>
    <string name="theme">тема</string>
    <string name="home">главная</string>
    <string name="earth">ЗЕМЛЯ</string>
    <string name="about_app">О приложении</string>
</resources>