<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_fav"
        android:icon="@drawable/ic_mars"
        android:title="@string/favourite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_settings"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_choice_theme"
        android:icon="@drawable/ic_baseline_brightness"
        android:title="@string/theme"
        app:showAsAction="ifRoom" />
</menu>
